update chatbot feature & moved all chatbot functions to chatbot folder

--- a/CREDIT-x-Lexo/src/chatbot/knowledge_base.json
+++ b/CREDIT-x-Lexo/src/chatbot/knowledge_base.json
@@ -7,5 +7,7 @@
         "description": "The Lexo device is equipped with a rechargeable battery...",
         "maintenance": "To maintain battery health, avoid overcharging..."
     },
-    // more topics...
+    "_comment": {
+        "_comment": "Add more knowledge base entries here..."
+    }
 }
